added some fixes in the main container

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main class="w-[90%] mx-auto my-[20px]">
         <section class="main-container flex gap-[20px]">
-            <div class="bg-white w-[60%]  rounded-xl flex">
+            <div class="bg-white w-[65%] mx-auto rounded-xl flex justify-between">
                 <div class="p-[20px] items-center justify-center flex gap-[10px]">
                     <div class="px-[20px] py-[10px] flex gap-[10px] bg-[#F4F7FF] items-center rounded-xl h-[80px]">
                         <div class="rounded-full bg-white ">
@@ -73,7 +73,7 @@
                     
                 </div>
             </div>
-            <div class="bg-white w-[35%] rounded-xl">
+            <div class="bg-white w-[40%] rounded-xl">
 
             </div>
         </section>
