--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="px-[20px] py-[10px] flex gap-[10px] bg-[#F4F7FF] items-center rounded-xl h-[80px]">
                         <div class="rounded-full bg-white ">
-                            <img class="  p-[10px]" src="assets/checkbox.png" alt="">
+                            <img class="  p-[10px]" src="assets/calender.png" alt="">
                         </div>
                         <div class="flex flex-col m-0 h-[70%]">
                             <p class="text-[15px] font-medium tracking-normal">Wed, <br><span class="font-bold text-[15px]">1 March, 2025</span></p>
@@ -71,7 +71,7 @@
                 </div>
                 
                 
-                    <div class="px-[30px] justify-between space-y-[20px] rounded-xl flex flex-wrap">
+                    <div id="task-container" class="px-[30px] justify-between space-y-[20px] rounded-xl flex flex-wrap">
                         <div class="bg-[#F4F7FF] w-[32%] px-[15px] py-[10px] rounded-xl space-y-[10px]">
                             <p class="bg-white p-[10px] w-[100px] rounded-xl font-semibold justify-center text-[14px]">ShopEase</p>
                             <h3 class="font-medium text-[18px] ">Fix Mobile Button Issue </h3>
@@ -79,7 +79,7 @@
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
                                 <div class="">
-                                    <button class="px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] ">Completed</button>
+                                    <button class="task-btn cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff]">Completed</button>
                                 </div>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
                                 <div class="">
-                                    <button class="px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] ">Completed</button>
+                                    <button class="task-btn cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff] ">Completed</button>
                                 </div>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
                                 <div class="">
-                                    <button class="px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] ">Completed</button>
+                                    <button class="task-btn cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff] ">Completed</button>
                                 </div>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
                                 <div class="">
-                                    <button class="px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] ">Completed</button>
+                                    <button class="task-btn cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff] ">Completed</button>
                                 </div>
                             </div>
                         </div>
@@ -123,7 +123,7 @@
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
                                 <div class="">
-                                    <button class="px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] ">Completed</button>
+                                    <button class="task-btn cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff] ">Completed</button>
                                 </div>
                             </div>
                         </div>
@@ -134,22 +134,29 @@
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
                                 <div class="">
-                                    <button class="px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] ">Completed</button>
+                                    <button class="task-btn cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff] ">Completed</button>
                                 </div>
                             </div>
                         </div>
                     </div>
             </div>
-            <div class="bg-white w-[40%] rounded-xl">
-                <div class="flex px-[30px] justify-center items-center h-[100px] border-b-[2px] border-dashed border-b-gray-100 gap-[20px] py-[40px]">
-                    <div class="items-center">
-                        <img src="assets/activity.png" alt="">
-                    </div> 
-                    <div>
-                        <h1 class="text-[22px] ">Activity Log</h1> 
+            <div id="activity-container" class="bg-white w-[40%] rounded-xl">
+                <div class=" px-[30px] justify-center items-center  border-b-[2px] border-dashed border-b-gray-100 gap-[20px] py-[10px]">
+                    <div class="flex items-center justify-center gap-[20px]">
+                        <div class="items-center">
+                            <img src="assets/activity.png" alt="">
+                        </div> 
+                        <div>
+                            <h1 class="text-[22px] ">Activity Log</h1> 
+                        </div>
+                    </div>
+                    <div class=" flex justify-center mt-[20px]">
+                        <button class=" cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff]">Clear History</button>
                     </div>
                 </div>
-                <div></div>
+                <div id="activity-item">
+
+                </div>
             </div>
         </section>
     </main>
