--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div>
                         <img src="assets/checkbox.png" alt="">
                     </div>
-                    <h2 class="text-[30px] font-bold">10</h2>
+                    <h2 id="completed-task" class="text-[30px] font-bold">10</h2>
                 </div>
                 <div class="bg-[#F4F7FF] rounded-full p-[10px]">
                     <img src="assets/theme-btn.png" alt="">
@@ -47,7 +47,7 @@
                             <img class="  p-[10px]" src="assets/checkbox.png" alt="">
                         </div>
                         <div class="flex flex-col m-0 h-[70%]">
-                            <p class="text-[12px] font-medium tracking-normal">Task Assigned <br><span class="font-bold text-[25px]">6</span></p>
+                            <p class="text-[12px] font-medium tracking-normal">Task Assigned <br><span id="assigned-task" class="font-bold text-[25px]">6</span></p>
                             
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
                                 <div class="">
-                                    <button class="task-btn cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff]">Completed</button>
+                                    <button class="task-btn cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] active:bg-[#bac3ff]">Completed</button>
                                 </div>
                             </div>
                         </div>
