--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div id="task-container" class="px-[30px] justify-between space-y-[20px] rounded-xl flex flex-wrap">
                         <div class="bg-[#F4F7FF] w-[32%] px-[15px] py-[10px] rounded-xl space-y-[10px]">
                             <p class="bg-white p-[10px] w-[100px] rounded-xl font-semibold justify-center text-[14px]">ShopEase</p>
-                            <h3 class="font-medium text-[18px] ">Fix Mobile Button Issue </h3>
+                            <h3 class="card-title font-medium text-[18px] ">Fix Mobile Button Issue </h3>
                             <p class="h-[70px]  bg-white rounded-xl text-black p-[10px]">Debug using Chrome DevTools, check for...</p>
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="bg-[#F4F7FF] w-[32%] px-[15px] py-[10px] rounded-xl space-y-[10px]">
                             <p class="bg-white p-[10px] w-[100px] rounded-xl font-semibold justify-center text-[14px]">CloudSync</p>
-                            <h3 class="font-medium text-[18px] ">Add Dark Mode</h3>
+                            <h3 class="card-title font-medium text-[18px] ">Add Dark Mode</h3>
                             <p class="h-[70px]  bg-white rounded-xl text-black p-[10px]">Store the user's preference in localStorage, update CSS...</p>
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="bg-[#F4F7FF] w-[32%] px-[15px] py-[10px] rounded-xl space-y-[10px]">
                             <p class="bg-white p-[10px] w-[100px] rounded-xl font-semibold justify-center text-[14px]">SwiftPay</p>
-                            <h3 class="font-medium text-[18px] ">Optimize  Home page </h3>
+                            <h3 class="card-title font-medium text-[18px] ">Optimize  Home page </h3>
                             <p class="h-[70px]  bg-white rounded-xl text-black p-[10px]">Debug using Chrome DevTools, check for...</p>
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="bg-[#F4F7FF] w-[32%] px-[15px] py-[10px] rounded-xl space-y-[10px]">
                             <p class="bg-white p-[10px] w-[100px] rounded-xl font-semibold justify-center text-[14px]">Meta</p>
-                            <h3 class="font-medium text-[18px] ">Add new emoji 🤲</h3>
+                            <h3 class="card-title font-medium text-[18px] ">Add new emoji 🤲</h3>
                             <p class="h-[70px]  bg-white rounded-xl text-black p-[10px]">Store the user's preference in localStorage, update CSS...</p>
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="bg-[#F4F7FF] w-[32%] px-[15px] py-[10px] rounded-xl space-y-[10px]">
                             <p class="bg-white p-[10px] w-[100px] rounded-xl font-semibold justify-center text-[14px]">Google LLC</p>
-                            <h3 class="font-medium text-[18px] ">Integrate OpenAI API </h3>
+                            <h3 class="card-title font-medium text-[18px] ">Integrate OpenAI API </h3>
                             <p class="h-[70px]  bg-white rounded-xl text-black p-[10px]">Debug using Chrome DevTools, check for...</p>
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
@@ -129,7 +129,7 @@
                         </div>
                         <div class="bg-[#F4F7FF] w-[32%] px-[15px] py-[10px] rounded-xl space-y-[10px]">
                             <p class="bg-white p-[10px] w-[100px] rounded-xl font-semibold justify-center text-[14px]">Glassdoar</p>
-                            <h3 class="font-medium text-[18px] ">Improve Job searching </h3>
+                            <h3 class="card-title font-medium text-[18px] ">Improve Job searching </h3>
                             <p class="h-[70px]  bg-white rounded-xl text-black p-[10px]">Store the user's preference in localStorage, update CSS...</p>
                             <div class="flex justify-between mt-[10px] border-t-[2px] border-dashed border-t-gray-200 pt-[10px] ">
                                 <p class="text-[12px]">Deadline <br><span class="font-medium text-[14px]">3 March 2025</span></p>
@@ -154,7 +154,7 @@
                         <button class=" cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff]">Clear History</button>
                     </div>
                 </div>
-                <div id="activity-item">
+                <div id="activity-item" class="px-[10px] py-[30px]">
 
                 </div>
             </div>
