added activity elements for all buttons

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class=" flex justify-center mt-[20px]">
-                        <button class=" cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff]">Clear History</button>
+                        <button id="clear-history" class=" cursor-pointer px-[15px] py-[10px] font-medium text-white rounded-xl bg-[#3752FD] hover:bg-[#bac3ff]">Clear History</button>
                     </div>
                 </div>
                 <div id="activity-item" class="px-[10px] py-[30px]">
