added question answers in the blog page

--- a/index.html
+++ b/index.html
@@ -168,29 +168,29 @@
                 <div class="ques mb-[20px] bg-white rounded-lg p-[20px] space-y-[10px]">
                     <h1 class="font-bold text-lgj">Question-1: What are the different ways to select an element in the DOM?</h1>
                     <hr class="text-gray-200">
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat perspiciatis magni. Quaerat ipsam explicabo facere blanditiis hic expedita ea consequuntur, iusto nemo dolorem esse eum voluptas architecto quasi. Magnam.</p>
+                    <p class="text-gray-700">An element can be selected in the DOM using getElelementbyId(), getElementsByTagName(), getElementsByClassName(), querySelector(), etc.</p>
                 </div>
                 <div class="ques mb-[20px] bg-white rounded-lg p-[20px] space-y-[10px]">
                     <h1 class="font-bold text-lgj">Question-2: What is the difference between innerHTML, innerText, and textContent ?</h1>
                     <hr class="text-gray-200">
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat perspiciatis magni. Quaerat ipsam explicabo facere blanditiis hic expedita ea consequuntur, iusto nemo dolorem esse eum voluptas architecto quasi. Magnam.</p>
+                    <p class="text-gray-700"><b>innerHTML: </b> innerHTML is used for accessing the HTML elements that are written whithin the selected element. <br><b>innerText: </b> innerText is used to get the value set inside of an element. <br><b>textContent: </b> textContent is used to get the text content of an HTML element. It represents the raw text in an element</p>
                 </div>
                 <div class="ques mb-[20px] bg-white rounded-lg p-[20px] space-y-[10px]">
                     <h1 class="font-bold text-lgj">Question-3: What is event delegation in the DOM?</h1>
                     <hr class="text-gray-200">
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat perspiciatis magni. Quaerat ipsam explicabo facere blanditiis hic expedita ea consequuntur, iusto nemo dolorem esse eum voluptas architecto quasi. Magnam.</p>
+                    <p class="text-gray-700">Event delevation is a system where we can attach a single event listener to a parent element instead of seperate event listeners for each child element.</p>
                 </div>
                 <div class="ques mb-[20px] bg-white rounded-lg p-[20px] space-y-[10px]">
                     <h1 class="font-bold text-lgj">Question-4: What is event bubbling in the DOM?
 
                     </h1>
                     <hr class="text-gray-200">
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat perspiciatis magni. Quaerat ipsam explicabo facere blanditiis hic expedita ea consequuntur, iusto nemo dolorem esse eum voluptas architecto quasi. Magnam.</p>
+                    <p class="text-gray-700">Event Bubbling refers to how events propagate through the DOM hierarchy. </p>
                 </div>
                 <div class="ques mb-[20px] bg-white rounded-lg p-[20px] space-y-[10px]">
                     <h1 class="font-bold text-lgj">Question-5: How do you create, add, and remove elements using JavaScript?</h1>
                     <hr class="text-gray-200">
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet placeat perspiciatis magni. Quaerat ipsam explicabo facere blanditiis hic expedita ea consequuntur, iusto nemo dolorem esse eum voluptas architecto quasi. Magnam.</p>
+                    <p class="text-gray-700">We can use removeChild() to remove a child node, appendChild() to add an element to a parent node, and create an element using document.createElement().</p>
                 </div>
                 
             </div>
